--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,10 +5,11 @@ edition = "2021"
 
 [dependencies]
 axum = "0.5"
-tokio = { version = "1.18", features = ["full"] }
-tower-http = { version = "0.3.4", features = ["trace"] }
-tracing-subscriber = "0.3.1"
-ldap3 = "0.10.5"
 clap = { version = "3.1", features = ["derive"] }
+ldap3 = "0.10.5"
 serde_yaml = "0.8"
 serde = { version = "1.0", features = ["derive"] }
+tokio = { version = "1.18", features = ["full"] }
+tower-http = { version = "0.3.4", features = ["trace"] }
+tracing = "0.1"
+tracing-subscriber = "0.3.1"
