--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,4 +12,8 @@ serde = { version = "1.0", features = ["derive"] }
 tokio = { version = "1.18", features = ["full"] }
 tower-http = { version = "0.3.4", features = ["trace"] }
 tracing = "0.1"
-tracing-subscriber = "0.3.1"
+tracing-subscriber = { version = "0.3", features = ["env-filter"] }
+
+[dependencies.openssl-sys]
+version = "0.9.74"
+features = ["vendored"]
