--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,8 +7,7 @@ edition = "2021"
 axum = "0.5"
 clap = { version = "3.1", features = ["derive"] }
 ldap3 = "0.10.5"
-serde_yaml = "0.8"
-serde = { version = "1.0", features = ["derive"] }
+yaml-rust = "0.4"
 tokio = { version = "1.18", features = ["full"] }
 tower-http = { version = "0.3.4", features = ["trace"] }
 tracing = "0.1"
