--- a/libreidp-runtime/meson.build
+++ b/libreidp-runtime/meson.build
@@ -7,7 +7,7 @@
 #
 # CREATED:          08/17/2022
 #
-# LAST EDITED:      08/18/2022
+# LAST EDITED:      08/22/2022
 #
 # Copyright 2022, Ethan D. Twardy
 #
@@ -29,5 +29,14 @@
 # FROM, OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS
 # IN THE SOFTWARE.
 ###
+
+libreidp_runtime = shared_library(
+  'reidp-runtime',
+  sources: [
+    'source/core/http.c',
+  ],
+  soversion: meson.project_version(),
+  include_directories: ['include'],
+)
 
 ###############################################################################
