Rename dummy plugin to OAuth2 (in preparation for implementation)

--- a/plugins/meson.build
+++ b/plugins/meson.build
@@ -7,7 +7,7 @@
 #
 # CREATED:          08/17/2022
 #
-# LAST EDITED:      08/17/2022
+# LAST EDITED:      09/03/2022
 #
 # Copyright 2022, Ethan D. Twardy
 #
@@ -30,6 +30,6 @@
 # IN THE SOFTWARE.
 ###
 
-subdir('dummy')
+subdir('oauth2')
 
 ###############################################################################
